--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "immer": "^9.0.14",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
