--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immer": "^9.0.14",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
